<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/spaceBlue"
    tools:context=".activity_inputfields">

    <TextView
        android:id="@+id/inputfields_text"
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:text="Enter Changes"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088" />

    <ImageButton
        android:id="@+id/inputfields_home_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="#00000000"
        android:scaleType="centerInside"
        android:src="@drawable/back"
        android:tint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <ImageButton
        android:id="@+id/inputfields_close_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="#00000000"
        android:src="@android:drawable/ic_lock_power_off"
        android:tint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="600dp"
        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputfields_text">

        <EditText
            android:id="@+id/Question_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/enterquestion"
            android:inputType="textPersonName"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textColorHint="#777777"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/Option1_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/enterchoice1"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:textColorHint="#777777"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/Option2_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/enterchoice2"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:textColorHint="#777777"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/Option3_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/enterchoice3"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:textColorHint="#777777"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/Option4_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/enterchoice4"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:textColorHint="#777777"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/Answer_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/enteranswer"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:textColorHint="#777777"
            android:textSize="25dp" />

        <Button
            android:id="@+id/Update_Button"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:text="Update"
            android:textSize="25dp"
            android:textStyle="bold"
            app:backgroundTint="#F9A825"
            app:cornerRadius="20dp" />

        <TextView
            android:id="@+id/numquestion_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:textAlignment="center"
            android:textSize="25dp"
            android:gravity="center"
            android:textColor="#F9A825"
            android:text="-------------" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

